--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,10 +3,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 100px;
   background: rgb(207, 207, 207);
   background: linear-gradient(
     180deg,
-    rgba(207, 207, 207, 1) 0%,
+    rgba(207, 207, 207, 1) 35%,
     rgba(255, 255, 255, 1) 100%
   );
 }
@@ -74,7 +75,7 @@
   .nav__list {
     z-index: 99;
     position: absolute;
-    top: 60px;
+    top: 100px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -87,5 +88,53 @@
 
   .list__item {
     margin: 20px 0 0 0;
+  }
+}
+
+/* FOOTER COMPONENT */
+
+.footer__container {
+  background: rgb(207, 207, 207);
+  background: linear-gradient(
+    0deg,
+    rgba(207, 207, 207, 1) 35%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: center;
+}
+
+.social__media {
+  text-decoration: none;
+  color: black;
+}
+
+.social__media:hover {
+  border-bottom: 1px solid black;
+}
+
+.first__text,
+.second__text {
+  font-weight: lighter;
+}
+
+@media screen and (min-width: 900px) {
+  .first__text {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 899px) {
+  .first__text {
+    margin: 0;
+    padding: 0;
   }
 }
