--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -102,6 +102,8 @@
   );
   position: absolute;
   bottom: 0;
+  /* margin: 0;
+  margin-top: auto; */
   width: 100%;
   height: 100px;
   display: flex;
@@ -137,4 +139,35 @@
     margin: 0;
     padding: 0;
   }
+}
+
+/* HOME COMPONENT */
+
+.home__container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.title__musics,
+.title__photos {
+  text-transform: uppercase;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+.img__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
+  transition: transform 0.5s;
+}
+
+.img__container:hover {
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
 }
