--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -143,31 +143,24 @@
 
 /* HOME COMPONENT */
 
-.home__container {
+.home {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: auto;
-  margin-bottom: auto;
+  justify-content: center;
 }
 
-.title__musics,
-.title__photos {
-  text-transform: uppercase;
-  font-weight: normal;
-  text-decoration: none;
-}
-
-.img__container {
+.home__container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 100px;
-  transition: transform 0.5s;
+  justify-content: center;
+  width: 50%;
+  height: 300px;
+  margin-top: 170px;
+  background-color: white;
+  opacity: 0.8;
+  font-size: 1.2rem;
 }
 
-.img__container:hover {
-  -ms-transform: scale(1.2); /* IE 9 */
-  -webkit-transform: scale(1.2); /* Safari 3-8 */
-  transform: scale(1.2);
+.title {
+  text-transform: uppercase;
 }
