--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -153,14 +153,51 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 50%;
-  height: 300px;
-  margin-top: 170px;
+  text-align: center;
   background-color: white;
   opacity: 0.8;
-  font-size: 1.2rem;
 }
 
 .title {
   text-transform: uppercase;
+  margin-left: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .home__container {
+    font-size: 0.6rem;
+    width: 95%;
+    height: 250px;
+    margin-top: 100px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
+@media screen and (max-width: 899px) {
+  .home__container {
+    font-size: 0.8rem;
+    width: 70%;
+    margin-top: 200px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .home__container {
+    width: 50%;
+    height: 300px;
+    margin-top: 170px;
+    font-size: 1.2rem;
+  }
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (min-width: 900px) {
+}
+
+@media screen and (max-width: 899px) {
+}
+
+@media screen and (max-width: 767px) {
 }
