--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,8 @@ body {
   height: 100%;
   background-image: url(../../public/images/arriereplan.jpg);
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+}
