--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -10,11 +10,15 @@
     rgba(207, 207, 207, 1) 35%,
     rgba(255, 255, 255, 1) 100%
   );
+  /* background-color: white;
+  opacity: 0.6; */
 }
 
 .title {
   text-transform: uppercase;
   font-weight: normal;
+  text-decoration: none;
+  color: black;
 }
 
 .nav {
@@ -100,10 +104,10 @@
     rgba(207, 207, 207, 1) 35%,
     rgba(255, 255, 255, 1) 100%
   );
-  position: absolute;
-  bottom: 0;
-  /* margin: 0;
-  margin-top: auto; */
+  /* position: absolute;
+  bottom: 0; */
+  margin: 0;
+  margin-top: auto;
   width: 100%;
   height: 100px;
   display: flex;
@@ -155,7 +159,7 @@
   justify-content: center;
   text-align: center;
   background-color: white;
-  opacity: 0.8;
+  background: rgba(255, 255, 255, 0.6);
 }
 
 .title {
@@ -191,12 +195,73 @@
   }
 }
 
+/* ABOUT COMPONENT */
+
+.about__container {
+  background-color: white;
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.profil {
+  border-radius: 50%;
+}
+
+@media screen and (max-width: 767px) {
+  .about__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 25px;
+    padding: 10px;
+  }
+
+  .profil {
+    width: 250px;
+    height: auto;
+  }
+
+  .description {
+    margin-top: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 75px;
+    padding: 25px;
+  }
+
+  .description {
+    margin-top: 45px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .about__container {
+    display: flex;
+    flex-direction: row;
+    margin: 75px 300px auto 300px;
+    padding: 50px;
+  }
+
+  .description {
+    margin-left: 50px;
+  }
+}
+
 /* MEDIA QUERIES */
 
 @media screen and (min-width: 900px) {
 }
 
-@media screen and (max-width: 899px) {
+@media screen and (min-width: 768px) {
 }
 
 @media screen and (max-width: 767px) {
