--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,17 +4,16 @@
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  background: rgb(207, 207, 207);
+  /* background: rgb(207, 207, 207);
   background: linear-gradient(
     180deg,
     rgba(207, 207, 207, 1) 35%,
     rgba(255, 255, 255, 1) 100%
-  );
-  /* background-color: white;
-  opacity: 0.6; */
+  ); */
+  background: rgba(255, 255, 255, 0.7);
 }
 
-.title {
+.name {
   text-transform: uppercase;
   font-weight: normal;
   text-decoration: none;
@@ -41,7 +40,7 @@
 }
 
 @media screen and (min-width: 900px) {
-  .title {
+  .name {
     margin-left: 50px;
   }
 
@@ -62,7 +61,7 @@
 }
 
 @media screen and (max-width: 899px) {
-  .title {
+  .name {
     margin-left: 20px;
   }
 
@@ -79,11 +78,12 @@
   .nav__list {
     z-index: 99;
     position: absolute;
-    top: 100px;
+    top: 66px;
     left: 0;
     right: 0;
     bottom: 0;
     background-color: white;
+    background: rgba(255, 255, 255, 0.9);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -98,14 +98,13 @@
 /* FOOTER COMPONENT */
 
 .footer__container {
-  background: rgb(207, 207, 207);
+  /* background: rgb(207, 207, 207);
   background: linear-gradient(
     0deg,
     rgba(207, 207, 207, 1) 35%,
     rgba(255, 255, 255, 1) 100%
-  );
-  /* position: absolute;
-  bottom: 0; */
+  ); */
+  background: rgba(255, 255, 255, 0.7);
   margin: 0;
   margin-top: auto;
   width: 100%;
@@ -139,9 +138,19 @@
 }
 
 @media screen and (max-width: 899px) {
+  .name {
+    font-size: 1.4rem;
+  }
+
   .first__text {
     margin: 0;
     padding: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .name {
+    font-size: 1.2rem;
   }
 }
 
@@ -164,6 +173,7 @@
 
 .title {
   text-transform: uppercase;
+  font-weight: normal;
   margin-left: 0;
 }
 
@@ -226,6 +236,7 @@
 
   .description {
     margin-top: 15px;
+    line-height: 130%;
   }
 }
 
@@ -240,6 +251,7 @@
 
   .description {
     margin-top: 45px;
+    line-height: 150%;
   }
 }
 
@@ -253,6 +265,7 @@
 
   .description {
     margin-left: 50px;
+    line-height: 200%;
   }
 }
 
