--- a/public/style/musics.module.css
+++ b/public/style/musics.module.css
@@ -6,7 +6,9 @@
 
 .musics__container {
   display: flex;
+  align-items: center;
   flex-direction: column;
+  padding: 25px;
   background-color: white;
   background: rgba(255, 255, 255, 0.6);
 }
@@ -14,10 +16,26 @@
 .type {
   text-transform: uppercase;
   font-weight: bold;
-  margin: 0;
+  font-size: 1.4rem;
+  letter-spacing: 2px;
+  border: none;
+  color: white;
+  background-color: black;
+  border-radius: 15px;
+  padding: 15px 0;
+  cursor: pointer;
+  width: 50%;
+  margin: 10px 0 10px 0;
+  transition: background-color 300ms, color 300ms;
 }
 
-.loops {
+.type:hover {
+  background-color: grey;
+}
+
+.loops,
+.productions,
+.speed__compositions {
   display: flex;
   align-items: center;
   flex-direction: column;
