Creation db and mapping on db

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-image: url(../../public/data/images/arriereplan.jpg);
+  background-image: url(../data/images/arriereplan.jpg);
 }
 
 body {
