--- a/public/style/photos.module.css
+++ b/public/style/photos.module.css
@@ -27,3 +27,75 @@
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+
+/* MODAL */
+
+.modal__container {
+  z-index: 99;
+  position: fixed;
+  background-color: black;
+  height: 95vh;
+  width: 95vw;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  border-radius: 25px;
+  padding: 20px;
+}
+
+.modal__image {
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover; */
+  border-radius: 25px;
+  max-width: 100%;
+  max-height: 100%;
+  /* object-fit: contain; */
+}
+
+.modal__close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
+  font-size: 30px;
+  color: red;
+  background-color: black;
+  cursor: pointer;
+  transition: transform 0.1s;
+}
+
+.modal__close:hover {
+  transform: scale(1.1);
+}
+
+.modal__prev,
+.modal__next {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  margin: 0 10px;
+  color: red;
+  transition: transform 0.1s;
+}
+
+.modal__prev {
+  position: fixed;
+  top: 50%;
+  left: 0;
+}
+
+.modal__next {
+  position: fixed;
+  top: 50%;
+  right: 0;
+}
+
+.modal__prev:hover,
+.modal__next:hover {
+  transform: scale(1.2);
+}
