--- a/public/style/photos.module.css
+++ b/public/style/photos.module.css
@@ -15,7 +15,7 @@
   object-fit: cover;
   margin: 10px;
   border-radius: 10px;
-  transition: transform 0.1s;
+  transition: transform 0.3s, opacity 0.3s;
 }
 
 .item:hover {
@@ -26,6 +26,7 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  opacity: 0.7;
 }
 
 /* MODAL */
