--- a/public/style/photos.module.css
+++ b/public/style/photos.module.css
@@ -54,9 +54,9 @@
   height: 100%;
   /* object-fit: cover; */
   border-radius: 25px;
-  max-width: 100%;
-  max-height: 100%;
-  /* object-fit: contain; */
+  /* max-width: 100%;
+  max-height: 100%; */
+  object-fit: contain;
 }
 
 .modal__close {
@@ -101,4 +101,10 @@
 .modal__prev:hover,
 .modal__next:hover {
   transform: scale(1.2);
+}
+
+@media screen and (max-width: 767px) {
+  .modal__image {
+    object-fit: contain;
+  }
 }
