--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -32,11 +32,11 @@
   }
 }
 
-@media screen and (max-width: 899px) {
+@media screen and (min-width: 768px) {
   .home__container {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     width: 70%;
-    margin-top: 200px;
+    margin-top: 300px;
   }
 }
 
@@ -44,7 +44,7 @@
   .home__container {
     width: 50%;
     height: 300px;
-    margin-top: 170px;
+    margin-top: 140px;
     font-size: 1.2rem;
   }
 }
